<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowFoodOrder"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/viewCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_bar_food_order"
        android:orientation="horizontal">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/back"
        android:layout_marginLeft="@dimen/_15sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill"
            android:textColor="@color/colorTextHint"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_10sdp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvFoodOrder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/boder"
        android:layout_margin="@dimen/_5sdp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MoneyTotal"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/colorTextHint"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/tvTotalMoneyOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Money"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/colorTextHint"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>