<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_100sdp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorOutlineBox"
            android:textColorHint="@color/colorTextHint"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number"
                android:maxLines="1"
                android:inputType="text"
                android:drawablePadding="@dimen/_5sdp"
                android:id="@+id/TIedtUsername"
                android:drawableLeft="@drawable/ic_person_24dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvNoticeUser"
            android:layout_marginLeft="@dimen/_22sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOutlineBox"
            android:textSize="@dimen/_6sdp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/colorOutlineBox"
                android:textColorHint="@color/colorTextHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_vpn_key_24dp"
                    android:id="@+id/TIedtPassword"
                    android:drawablePadding="@dimen/_5sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnShowPassword"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:background="@drawable/ic_eye_24dp"
                android:layout_gravity="right"/>
        </FrameLayout>

        <TextView
            android:id="@+id/tvNoticePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_6sdp"
            android:textColor="@color/colorOutlineBox"
            android:layout_marginLeft="@dimen/_22sdp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_below="@id/tvNoticePassword"
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorTextHint"
            android:textStyle="bold"
            android:background="@drawable/button_login"/>

    </LinearLayout>

</RelativeLayout>